--- a/style.css
+++ b/style.css
@@ -731,11 +731,6 @@ svg {
 /* Min Profil Sida*/
 .wrapper-profile{
     background-color: var(--purple);
-    /* overflow: hidden;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    flex-direction: column; */
     height: 100%;
     width: 100%;
     overflow: hidden;
@@ -747,6 +742,7 @@ svg {
     position: relative;
     left: calc(50% - 110px);
     top: 70px;
+    border: 10px solid var(--green);
 }
 
 .changeSettingsButton {
@@ -795,7 +791,7 @@ svg {
     font-weight: normal;
     padding-left: 5px;
     margin-bottom: 2px; 
-    max-width: 350px;
+    max-width: 500px;
 }
 
 /* dogowner */
@@ -834,6 +830,10 @@ svg {
 .wrapper-contact > h2 {
     font-family: var(--font-title);
     margin-bottom: 0px;
+}
+
+.wrapper-contact > p:first-child{
+    font-size: 20px;
 }
 
 .wrapper-dog > p:last-child {
@@ -922,8 +922,10 @@ svg {
 }
 
 #wrapper-extra_info{
-    height: 250px;
-    width: 250px;
+    height: 350px;
+    width: 350px;
+    display: flex;
+    background-color: var(--green);
     flex-direction: column;
     align-items: center;
     position: relative;
@@ -933,6 +935,9 @@ svg {
     font-family: var(--font-paragraph);
     color: var(--white);
     text-align: center;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
 }
 
 #wrapper-extra_info > p {
@@ -946,7 +951,8 @@ svg {
     max-width: 400px;
     text-align: center;
     font-size: 20px;
-    padding: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #wrapper-info > p:last-child {
