fixing index bugg

--- a/style.css
+++ b/style.css
@@ -319,6 +319,7 @@ body {
 }
 
 .partTwo {
+    margin-top: 15vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
